--- a/lib/I10n/intl_ar.arb
+++ b/lib/I10n/intl_ar.arb
@@ -1,6 +1,6 @@
 {
   "@@locale" :   "ar" ,
-  "@@last_modified": "2018-04-20T13:52:51.432337",
+  "@@last_modified": "2018-04-21T10:52:19.296801",
   "username": "اسم المستخدم",
   "@username": {
     "type": "text",
@@ -28,6 +28,31 @@
   },
   "language": "English",
   "@language": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "links": "الروابط",
+  "@links": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "contacts": "جهات الاتصال",
+  "@contacts": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "attendance": "الحضور",
+  "@attendance": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "support": "الدعم",
+  "@support": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "profile": "الملف الشخصي",
+  "@profile": {
     "type": "text",
     "placeholders": {}
   }
